component button-group dev

--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -117,7 +117,7 @@
 
     // 幽灵
     &-ghost&-default {
-        .btn-ghost(@light-color);
+        .btn-ghost(@light-color, true);
     }
 
     &-ghost&-primary {
