--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -18,6 +18,7 @@
 @import "./components/icon.less";
 @import "./components/spin.less";
 @import "./components/button.less";
+@import "./components/button-group.less";
 @import "./components/grid.less";
 @import "./components/tooltip.less";
 @import "./components/layout.less";
