component switch update: version 1 complate . basis features complate .

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -113,3 +113,10 @@ grid-xl-only;
 
 // modal
 @modal-mask-bg-color: rgba(0, 0, 0, 0.65);
+
+// switch
+@switch-active-color: @primary-color;
+@switch-close-color: #dcdfe6;
+@switch-disable-color: #ebeef5;
+@switch-text-color: @text-color-base;
+@switch-font-size: @font-size-default;
