--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -23,3 +23,4 @@
 @import "./components/layout.less";
 @import "./components/popover.less";
 @import "./components/modal.less";
+@import "./components/switch.less";
