component input dev & modify style variables.less

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -35,30 +35,40 @@
 @background-color-light: #fafafa;
 
 // 字体大小
-@font-size-default: 14px;
+@font-size-base: 14px;
+@font-size-small: 12px;
+@font-size-large: 16px;
 
 // 圆角
-@border-radius: 2px;
+@border-radius-base: 4px;
 
 // 组件间距
 @component-gutter: 20px;
 @same-component-gutter: 12px;
 
+// 基准行高
+@line-height-base: 1.5;
+
 // 按钮填充
-@btn-padding-default: 4px 15px 5px 15px;
-@btn-padding-small: 3px 12px 4px 12px;
-@btn-padding-large: 7px 18px 8px 18px;
+@btn-padding-base: 4px 15px 5px 15px;
+@btn-padding-small: 4px 12px;
+@btn-padding-large: 8px 18px;
+
+// 输入框填充
+@input-padding-base: 4px 8px 5px 8px;
+@input-padding-small: 4px 6px;
+@input-padding-large: 8px 10px;
 
 // 过度动画时间
 @transition-duration: 0.3s;
 
 // layout
 @header-padding: 0 20px;
-@header-default-height: 55px;
+@header-height-base: 55px;
 @footer-padding: 0 20px;
-@footer-default-height: 55px;
+@footer-height-base: 55px;
 @main-padding: 20px;
-@aside-default-width: 220px;
+@aside-width-base: 220px;
 
 // 栅格部分
 // 断点
