--- a/src/styles/components/button-group.less
+++ b/src/styles/components/button-group.less
@@ -10,13 +10,13 @@
         flex-direction: row;
 
         > .@{prefix}btn:first-child {
-            border-top-left-radius: @border-radius;
-            border-bottom-left-radius: @border-radius;
+            border-top-left-radius: @border-radius-base;
+            border-bottom-left-radius: @border-radius-base;
         }
 
         > .@{prefix}btn:last-child {
-            border-top-right-radius: @border-radius;
-            border-bottom-right-radius: @border-radius;
+            border-top-right-radius: @border-radius-base;
+            border-bottom-right-radius: @border-radius-base;
         }
 
         > .@{prefix}btn {
@@ -58,13 +58,13 @@
         flex-direction: column;
 
         > .@{prefix}btn:first-child {
-            border-top-left-radius: @border-radius;
-            border-top-right-radius: @border-radius;
+            border-top-left-radius: @border-radius-base;
+            border-top-right-radius: @border-radius-base;
         }
 
         > .@{prefix}btn:last-child {
-            border-bottom-left-radius: @border-radius;
-            border-bottom-right-radius: @border-radius;
+            border-bottom-left-radius: @border-radius-base;
+            border-bottom-right-radius: @border-radius-base;
         }
 
         > .@{prefix}btn {
