--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -23,18 +23,18 @@
 .@{prefix}header {
     flex-shrink: 0;
     padding: @header-padding;
-    height: @header-default-height;
+    height: @header-height-base;
 }
 
 .@{prefix}footer {
     flex-shrink: 0;
     padding: @footer-padding;
-    height: @footer-default-height;
+    height: @footer-height-base;
 }
 
 .@{prefix}aside {
     overflow: auto;
     box-sizing: border-box;
     flex-shrink: 0;
-    width: @aside-default-width;
+    width: @aside-width-base;
 }
