--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -8,6 +8,7 @@
 @import "./mixins/disabled.less";
 @import "./mixins/spin.less";
 @import "./mixins/button.less";
+@import "./mixins/input.less";
 @import "./mixins/grid.less";
 
 // animation
@@ -19,6 +20,7 @@
 @import "./components/spin.less";
 @import "./components/button.less";
 @import "./components/button-group.less";
+@import "./components/input.less";
 @import "./components/grid.less";
 @import "./components/tooltip.less";
 @import "./components/layout.less";
