--- a/src/styles/components/modal.less
+++ b/src/styles/components/modal.less
@@ -64,7 +64,7 @@
     }
 
     > .@{prefix}modal {
-        border-radius: @border-radius;
+        border-radius: @border-radius-base;
         background-color: @light-color;
         min-height: 140px;
         overflow: hidden;
@@ -74,7 +74,7 @@
             line-height: @modal-header-height;
             display: flex;
             padding: 0 @component-gutter * 0.75;
-            font-size: @font-size-default;
+            font-size: @font-size-base;
             color: @text-color-base;
 
             > .@{prefix}modal-header-title {
@@ -97,8 +97,8 @@
         > .@{prefix}modal-body {
             padding: @component-gutter * 0.5 @component-gutter * 0.75;
             color: @text-color-gray;
-            font-size: @font-size-default;
-            line-height: 1.5;
+            font-size: @font-size-base;
+            line-height: @line-height-base;
         }
 
         > .@{prefix}modal-footer {
@@ -108,7 +108,7 @@
             display: flex;
             align-items: center;
             color: @text-color-gray;
-            font-size: @font-size-default;
+            font-size: @font-size-base;
 
             &-justify-start {
                 justify-content: flex-start;
