--- a/src/styles/components/popover.less
+++ b/src/styles/components/popover.less
@@ -8,7 +8,7 @@
 
 .@{prefix}popover {
     > .@{prefix}popover-inner {
-        border-radius: @border-radius;
+        border-radius: @border-radius-base;
         background-color: @light-color;
         min-width: 180px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
@@ -17,13 +17,13 @@
         > .@{prefix}popover-title {
             color: @text-color-base;
             margin-bottom: 5px;
-            font-size: @font-size-default + 2px;
+            font-size: @font-size-large;
         }
 
         > .@{prefix}popover-content {
             color: @text-color-gray;
-            font-size: @font-size-default;
-            line-height: 1.5;
+            font-size: @font-size-base;
+            line-height: @line-height-base;
         }
     }
 
