style scrollbar dev

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -9,6 +9,7 @@
 @import "./mixins/spin.less";
 @import "./mixins/button.less";
 @import "./mixins/grid.less";
+@import "./mixins/scrollBar.less";
 
 // animation
 @import "./animation/rotating.less";
