component input update: basis input complete

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -120,3 +120,6 @@ grid-xl-only;
 @switch-disable-color: #ebeef5;
 @switch-text-color: @text-color-base;
 @switch-font-size: @font-size-default;
+
+// Transition
+@border-color-transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
