--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,7 @@
 // common
 @import "./common/variables.less";
 @import "./common/reset.less";
+@import "./common/basis.less";
 
 // mixins
 @import "./mixins/clearfix.less";
@@ -25,3 +26,5 @@
 @import "./components/popover.less";
 @import "./components/modal.less";
 @import "./components/switch.less";
+@import "./components/input.less";
+@import "./components/form-item.less";
